[package]
name = "hexfoo_game"

authors = ["Rich Churcher <rich.churcher@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { features = ["dynamic_linking"], version = "0.12.0" }
hexfoo_lib = { path = "../hexfoo_lib", version = "0.1.0" }
